[package]
name = "store-interval-tree"
version = "0.4.0"
edition = "2021"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "A balanced unbounded interval-tree in Rust with associated values in the nodes"
documentation = "https://docs.rs/store-interval-tree"
repository = "https://github.com/andreafioraldi/store-interval-tree"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tree", "data-structure", "algorithm"]
categories = ["data-structures", "algorithms" ]

[dependencies]
num = { version = "0.4", default_features = false }
rkyv = { git = "https://github.com/praveenperera/rkyv", branch = "0.7", features = [
    "indexmap",
    "validation",
    "strict",
]}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bytecheck = { version = "0.6", optional = true }